processor/src/test/resources/model/bad/MethodWithoutObjectModel.java
package com.bluelinelabs.logansquare.processor.bad;

import com.bluelinelabs.logansquare.annotation.OnJsonParseComplete;

public class MethodWithoutObjectModel {


    @OnJsonParseComplete
    public void onParseComplete() {

    }

}
